welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: value =/= is not a member of Int
while(dejaFait =/= npBas){recule();}
               ^